// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: false and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: false and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: true and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-base, hasLabel: true and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, hasLabel: true and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #212225;
  color: #FBFCFF;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, hasLabel: true and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  outline: 0 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  position: relative;
  align-items: center;
  gap: 12px;
  min-height: 54px;
  padding: 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #EEEFF2;
  color: #010205;
  text-align: start;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button:focus::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid #1A44EA;
  border-radius: 8px;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, .18);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.icon {
  padding: 4px;
  margin-inline-end: -2px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
